		
		"tcpSndBuf" - Should the driver set SO_SND_BUF to the given value?
		              The default value of '0', means use the platform default 
		              value for this property.
	
		"tcpTrafficClass" - Should the driver set traffic class or 
		                    type-of-service fields? See the documentation 
		                    for java.net.Socket.setTrafficClass() for more 
		                    information.      	       
05-15-07 - Version 5.0.6

	- Fixed BUG#25545 - Client options not sent correctly when using SSL,
	  leading to stored procedures not being able to return results. Thanks
	  to Don Cohen for the bug report, testcase and patch.

	- Fixed BUG#26592 - PreparedStatement is not closed in 
	  BlobFromLocator.getBytes().

	- Fixed BUG#25624 - Whitespace surrounding storage/size specifiers in 
	  stored procedure parameters declaration causes NumberFormatException to 
	  be thrown when calling stored procedure on JDK-1.5 or newer, as the Number
	  classes in JDK-1.5+ are whitespace intolerant.	  
	  
	- Fixed BUG#26173 - When useCursorFetch=true, sometimes server would return
	  new, more exact metadata during the execution of the server-side prepared
	  statement that enables this functionality, which the driver ignored (using
	  the original metadata returned during prepare()), causing corrupt reading
	  of data due to type mismatch when the actual rows were returned.

	- Fixed BUG#26959 - comments in DDL of stored procedures/functions confuse 
	  procedure parser, and thus metadata about them can not be created, leading to
	  inability to retrieve said metadata, or execute procedures that have certain
	  comments in them.
	  
	- Give better error message when "streaming" result sets, and the connection
	  gets clobbered because of exceeding net_write_timeout on the server. (which is
	  basically what the error message says too).

	- Fixed BUG#26789 - fast date/time parsing doesn't take into
	  account 00:00:00 as a legal value.
	 