@@ -345,6 +345,7 @@ MysqlIO.98=\ in column
 MysqlIO.99=\ of 
 MysqlIO.100=\ in binary-encoded result set.
 MysqlIO.102=, underlying cause: 
+MysqlIO.EOF=Can not read response from server. Expected to read {0} bytes, read {1} bytes before connection was unexpectedly lost.
 NotImplemented.0=Feature not implemented
 PreparedStatement.0=SQL String can not be NULL
 PreparedStatement.1=SQL String can not be NULL
